rust_compiler/libs/integration_tests/src/snapshots/integration_tests__function_tests__function_tests__leaf_function_no_stack_frame.snap
---
source: libs/integration_tests/src/function_tests.rs
assertion_line: 31
expression: output
---
## Unoptimized Output

j main
increment:
pop r8
push sp
push ra
add r1 r8 1
move r8 r1
__internal_L1:
pop ra
pop sp
j ra

## Optimized Output

j main
pop r8
push sp
push ra
add r1 r8 1
move r8 r1
pop ra
pop sp
j ra
