rust_compiler/libs/integration_tests/src/snapshots/integration_tests__function_tests__function_tests__simple_leaf_function.snap
---
source: libs/integration_tests/src/function_tests.rs
assertion_line: 10
expression: output
---
## Unoptimized Output

j main
test:
push sp
push ra
move r8 10
__internal_L1:
pop ra
pop sp
j ra

## Optimized Output

j main
push sp
push ra
move r8 10
pop ra
pop sp
j ra
